# fasthog

./: CMakeLists.txt  README.md  setup.py
.github/workflows/: wheels.yml
fasthog/: __init__.py
include/: hog.h  hog.hpp
src/: hog.c  hog.cpp
